# SimCompression

./: .clang-format  CMakeLists.txt  README.md  config.json
include/: chunker.hpp  compressor.hpp  configure.hpp  cryptoPrimitive.hpp  dataStructure.hpp  database.hpp  dataset.h  dector.hpp  manager.hpp  segmenter.h  storageCore.hpp
include/simcomp/: base.hpp  check.hpp  delta.hpp  finese.hpp  ntransform.hpp  zdelta.hpp
src/: chunker.cc  compressor.cc  configure.cc  cryptoPrimitive.cc  database.cpp  dector.cc  main.cc  manager.cc  storageCore.cpp
tests/: CMakeLists.txt
tests/sim/: chunkerTest.cc
